# guardrailmesh

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  entrypoint.sh  patch_static.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
guardrail-dashboard/: package.json
guardrail-dashboard/src/: App.jsx  api.js
guardrail_framework/: __init__.py  actions.py  auth.py  bundle.py  compiler.py  core.py  decision_log.py  examples.py  middleware.py  observability.py  opa_gaps.py  persistence.py  rate_limiter.py  server.py  testing.py
guardrail_framework/backends/: __init__.py  aws_bedrock.py  azure_content_safety.py  azure_prompt_shields.py  custom.py  guardrails_ai.py  lakera.py  llama_firewall.py  llm_guard.py  nemo.py  openai_moderation.py  presidio.py
migrations/: env.py
migrations/versions/: a3f2c8b1d4e7_add_blocklist_table.py  cac15525a8d8_initial_schema.py
tests/: test_core.py
